--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1092192491840737421/1429613108778897589/64925cb6-4500-4b63-81f9-26f1f7341c9b.jpg?ex=68f6c676&is=68f574f6&hm=6952a728101ccb4ed4a24a08a421bd630b1ff02106d2db3cf096418f9f4f0d8c&=&format=webp&width=563&height=563" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
